--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
 		"gulp-livereload": "^4.0.2",
 		"gulp-plumber": "^1.2.0",
 		"gulp-pug": "^3.3.0",
-		"gulp-sass": "^3.1.0",
+		"gulp-sass": "^5.1.0",
 		"gulp-sourcemaps": "^2.6.4",
 		"gulp-uglify": "^3.0.0",
 		"pump": "^3.0.0",
-		"run-sequence": "^2.2.1"
+		"run-sequence": "^2.2.1",
+		"sass": "^1.48.0"
 	},
 	"dependencies": {
 		"array-union": "^2.1.0",
